--- a/.github/workflows/main_smart-parking-system-backend.yml
+++ b/.github/workflows/main_smart-parking-system-backend.yml
@@ -33,6 +33,11 @@ jobs:
           cd backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Collect static files
+        run: |
+          cd backend 
+          python manage.py collectstatic --noinput
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
